<resources>
	<string name="app_name">phiola</string>
	<string name="main_st_playing">Playing</string>
	<string name="blibrary">Library</string>
	<string name="bexplorer">Explorer</string>
	<string name="main_playlist_n">Playlist %d</string>

	<string name="brec">Record</string>
	<string name="brec_stop">Stop Recording</string>
	<string name="brec_mic">Record From Mic</string>
	<string name="brec_radio">Record From Radio</string>
	<string name="brec_bookmark">Set/Jump Bookmark</string>
	<string name="brec_hide">Hide Button</string>
	<string name="brec_start_longpress_hint">Long press to start recording</string>
	<string name="brec_paused">Paused Recording</string>
	<string name="brec_resumed">Resumed Recording</string>
	<string name="main_rec_fin">Finished recording</string>
	<string name="main_rec_err">Recording error: %s</string>
	<string name="main_rec_started">Started recording</string>
	<string name="mrec_info_show">Recording Status</string>
	<string name="bplay">Play</string>
	<string name="bpause">Pause</string>
	<string name="bprev">Previous</string>
	<string name="bnext">Next</string>
	<string name="bbmark_set">Bookmark is set to %d:%02d</string>
	<string name="bbmark_set_hint">Long-press the button to set bookmark</string>

	<string name="explorer_up">&lt;UP&gt;</string>
	<string name="explorer_stg_dirs">[Storage directories]</string>

	<string name="menu_settings">Settings</string>
	<string name="mfile">File Menu</string>
	<string name="mfile_tags_show">File: Show Tags</string>
	<string name="mfile_convert">File: Convert...</string>
	<string name="mfile_show">File: Show in Explorer</string>
	<string name="mfile_del">File: Delete from Storage</string>
	<string name="mfile_move">File: Quick Move</string>
	<string name="mfile_list_show">File: Show in Playlist</string>
	<string name="mfile_list_remove">File: Remove from Playlist</string>

	<string name="mplay_auto_stop">Auto-Stop Timer: Toggle</string>
	<string name="mplay_auto_stop_msg">Will stop playing after %d min</string>

	<string name="mlist">Playlist Menu</string>
	<string name="mlist_new">List: New</string>
	<string name="mlist_created">Created Playlist %d</string>
	<string name="mlist_close">List: Close</string>
	<string name="mlist_closed">Closed playlist</string>
	<string name="mlist_save">List: Save...</string>
	<string name="mlist_rename">List: Rename...</string>
	<string name="mlist_add">List: Add...</string>
	<string name="mlist_remove_non_existing">List: Remove Non-Existing Files</string>
	<string name="mlist_remove_non_unique">List: Remove Non-Unique Files</string>
	<string name="mlist_trk_rm">Removed 1 entry</string>
	<string name="mlist_clear">List: Clear</string>
	<string name="mlist_next_add_sel">Add to Next List</string>
	<string name="mlist_trk_added">Added track to Playlist %d</string>
	<string name="mlist_sort">List: Sort...</string>
	<string name="mlist_sort_filename">List: Sort by File Path</string>
	<string name="mlist_sort_filesize">List: Sort by File Size</string>
	<string name="mlist_sort_filedate">List: Sort by File Date</string>
	<string name="mlist_shuffle">List: Shuffle</string>
	<string name="mlist_sort_tag_artist">List: Sort by Artist</string>
	<string name="mlist_sort_tag_date">List: Sort by Date</string>
	<string name="mlist_move_left">List: Move Left</string>
	<string name="mlist_convert">List: Convert All...</string>
	<string name="mlist_files_move">List: Quick Move All Files</string>
	<string name="mlist_read_meta">List: Read Tags</string>

	<string name="mexplorer_add_list_cur">Add To Current List</string>
	<string name="mexplorer_add_list_new">Add To New List</string>

	<string name="mitem_list_remove">Remove from List</string>
	<string name="mitem_file_show">Show in Explorer</string>
	<string name="mitem_file_delete">Delete File from Storage</string>
	<string name="mitem_file_move">Quick-Move File</string>
	<string name="mitem_file_rename">Rename File...</string>
	<string name="mitem_file_show_info">Show Tags</string>

	<string name="sett_activity_label">Settings</string>
	<string name="sett_interface">Interface</string>
	<string name="sett_dark">Dark Theme</string>
	<string name="sett_color">Main Color...</string>
	<string name="sett_show_filter">Hide \'Search\' Edit Box</string>
	<string name="sett_rec_btn">First Control Button:</string>
	<string name="sett_ui_info_in_title">Show Audio Info in Title</string>
	<string name="sett_svc_notif_disable">Disable System Notification (requires restart)</string>

	<string name="sett_playlist">Playlist</string>
	<string name="sett_random">Random</string>
	<string name="sett_repeat_all">Repeat All</string>
	<string name="sett_list_move_on_next">After Tap on \'Next\': Move Track to Next Playlist</string>
	<string name="sett_list_rm_on_next">After Tap on \'Next\': Remove Track from Playlist</string>
	<string name="sett_list_rm_on_err">Remove Track from Playlist on Error</string>
	<string name="sett_auto_stop">Auto-Stop Timer (min):</string>

	<string name="sett_playback">Playback</string>
	<string name="sett_codepage">Codepage for Non-Unicode Tags</string>
	<string name="sett_auto_skip">Auto-Skip the Beginning of Each Track (% or sec):</string>
	<string name="sett_auto_skip_tail">Auto-Skip the Ending of Each Track (% or sec):</string>
	<string name="sett_rg_norm">ReplayGain Normalizer</string>
	<string name="sett_auto_norm">Auto Loudness Normalizer</string>
	<string name="sett_equalizer_enable">Equalizer</string>
	<string name="sett_equalizer_frequency">Frequency (Hz):</string>
	<string name="sett_equalizer_width">Width (Q):</string>
	<string name="sett_equalizer_gain">Gain (dB):</string>

	<string name="sett_operation">Operation</string>
	<string name="sett_file_del">Don\'t Move Files to Trash</string>
	<string name="sett_trash_dir">Trash Directory (relative to storage mount-point):</string>
	<string name="sett_library_dir">Music Library Directories (separated by ";"):</string>
	<string name="sett_data_dir">App Data Directory:</string>
	<string name="sett_deprecated_mods">Enable Deprecated Modules (ALAC)</string>

	<string name="sett_recording">Recording</string>
	<string name="sett_rec_longclick">Long-click for Start/Stop; Short-click for Pause/Resume</string>
	<string name="sett_rec_dir">Directory for Recordings:</string>
	<string name="sett_rec_name">File Name Template:</string>
	<string name="sett_rec_src">Audio Source:</string>
	<string name="sett_rec_chan">Channels:</string>
	<string name="sett_rec_chan_default">Default</string>
	<string name="sett_rec_chan_mono">1 (Mono)</string>
	<string name="sett_rec_chan_stereo">2 (Stereo)</string>
	<string name="sett_rec_rate">Sample Rate (Hz):</string>
	<string name="sett_rec_enc">Encoder:</string>
	<string name="sett_rec_bitrate">Encoder Bitrate (kbit/sec):</string>
	<string name="sett_rec_in_format">Sample Format:</string>
	<string name="sett_rec_buf_len">Buffer Length (msec):</string>
	<string name="sett_rec_until">Auto-Stop After:</string>
	<string name="sett_rec_danorm">Dynamic Audio Normalizer</string>
	<string name="sett_rec_gain">Gain/attenuate (dB):</string>
	<string name="sett_rec_exclusive">Exclusive Mode</string>
	<string name="sett_rec_list_add">Add Recorded File to Playlist</string>

	<string name="btn_cancel">Cancel</string>
	<string name="fdelete_title">File Delete</string>
	<string name="fdelete_msg_trash">Move file to Trash: %s ?</string>
	<string name="fdelete_btn_trash">Trash</string>
	<string name="fdelete_msg_delete">Delete file from storage: %s ?</string>
	<string name="fdelete_btn_delete">Delete</string>
	<string name="fdelete_deleted">Deleted file</string>
	<string name="fdelete_trash_moved">Moved file to Trash directory</string>

	<string name="fmove_title">Move file</string>
	<string name="fmove_msg">Move file to %s ?</string>
	<string name="fmove_btn_confirm">Move File</string>
	<string name="fmove_btn_cancel">Do nothing</string>
	<string name="fmove_done">Moved file to %s</string>

	<string name="frename_title">Rename file</string>
	<string name="frename_msg">Specify new name</string>
	<string name="frename_btn_confirm">Rename</string>
	<string name="frename_done">Renamed file</string>

	<string name="lssv_ldir">Output directory:</string>
	<string name="lssv_lname">Playlist name:</string>
	<string name="lssv_bsave">Save</string>

	<string name="conv_activity_label">Convert Audio</string>
	<string name="conv_in_out">Input &amp; Output</string>
	<string name="conv_input_file">Input file:</string>
	<string name="conv_out_dir">Output directory:</string>
	<string name="conv_out_name">Output file name (w/o extension):</string>
	<string name="conv_out_fmt">Output format:</string>

	<string name="conv_range">Audio Range</string>
	<string name="conv_apos_start">Start Audio Position:</string>
	<string name="conv_from_set_cur">Set To Current</string>
	<string name="conv_apos_end">End Audio Position:</string>
	<string name="conv_tags">Tags (NAME=VALUE;...):</string>

	<string name="conv_filters">Filters</string>
	<string name="conv_sample_format">Sample Format</string>
	<string name="conv_sample_rate">Sample rate (Hz):</string>

	<string name="conv_encoding">Encoding</string>
	<string name="conv_aac_q">[.m4a] AAC Quality: 1..5 (VBR) or 8..800 (CBR, kbit/s):</string>
	<string name="conv_opus_q">[.opus] Opus Quality (VBR, kbit/s):</string>
	<string name="conv_mp3_q">[.mp3] MP3 Quality 9..0 (VBR) or 64..320 (CBR, kbit/s):</string>
	<string name="conv_copy">[.mp3/.m4a/.ogg] Stream Copy</string>

	<string name="conv_behaviour">Behavior</string>
	<string name="conv_preserve_date">Preserve File Modification Date</string>
	<string name="conv_overwrite">Overwrite Output Files</string>
	<string name="conv_overwrite2">Really overwrite output files?</string>
	<string name="conv_trash_orig">Move Input File to Trash</string>
	<string name="conv_pl_add">Add New File to Playlist</string>

	<string name="conv_go">Begin Conversion</string>

	<string name="tags_activity_label">File Tags</string>
	<string name="menu_tags_write">Write Tags to File!</string>
	<string name="menu_tags_clear">Remove All Tags</string>
	<string name="menu_tag_add">Add Tag...</string>
	<string name="menu_tag_add_artist">Add Tag: Artist</string>
	<string name="menu_tag_add_title">Add Tag: Title</string>

	<string name="menu_about">About</string>
	<string name="about_enable_debug_log">Enable debug logging</string>
	<string name="about_save_logs">Save system logs to file</string>
	<string name="about_log_saved">Saved logs to %s</string>
	<string name="about_close">Close</string>

	<string name="tag_edit_n_a">Editing tags for this file format is not supported</string>

	<string name="err_phi_nosrc">Input file doesn\'t exist</string>
	<string name="err_phi_dstexist">Output file already exists</string>
	<string name="err_phi_unkifmt">Unknown input file format</string>
	<string name="err_phi_audio_input">Input audio device problem</string>
	<string name="err_phi_cancelled">Cancelled</string>
	<string name="err_phi_aconv">Sample conversion</string>
	<string name="err_phi_out_fmt">Output format is not supported</string>
</resources>
