<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_settings"
		android:title="@string/menu_settings" />

	<item android:id="@+id/action_file_menu_show"
		android:icon="@drawable/audio_file"
		app:contentDescription="@string/mfile"
		app:showAsAction="ifRoom" />

	<item android:id="@+id/action_list_menu_show"
		android:icon="@drawable/list"
		app:contentDescription="@string/mlist"
		app:showAsAction="ifRoom" />

	<item android:id="@+id/action_play_auto_stop"
		android:title="@string/mplay_auto_stop" />

	<item android:id="@+id/action_rec_info_show"
		android:title="@string/mrec_info_show" />

	<item
		android:id="@+id/action_about"
		android:title="@string/menu_about" />
</menu>
