<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/conv_in_out"
			android:textColor="@color/sett_group"
			android:textSize="@dimen/grp_name_size" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_input_file"
			android:textColor="@color/text" />

		<EditText
			android:id="@+id/eInName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="text"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_out_dir"
			android:textColor="@color/text" />
		<EditText
			android:id="@+id/eOutDir"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="text"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_out_name"
			android:textColor="@color/text" />
		<EditText
			android:id="@+id/eOutName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="text"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_out_fmt"
			android:textColor="@color/text" />
		<Spinner
			android:id="@+id/spOutExt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_tags"
			android:textColor="@color/text" />
		<EditText
			android:id="@+id/eTags"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/conv_range"
			android:textColor="@color/sett_group"
			android:textSize="@dimen/grp_name_size" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_apos_start"
			android:textColor="@color/text" />
		<SeekBar
			android:id="@+id/sbRangeFrom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:max="100" />
		<EditText
			android:id="@+id/eFrom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="time"
			android:textSize="@dimen/text_editbox" />
		<Button
			android:id="@+id/bFromSetCur"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_from_set_cur" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_apos_end"
			android:textColor="@color/text" />
		<SeekBar
			android:id="@+id/sbRangeUntil"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:max="100" />
		<EditText
			android:id="@+id/eUntil"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="time"
			android:textSize="@dimen/text_editbox" />
		<Button
			android:id="@+id/bUntilSetCur"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_from_set_cur" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/conv_filters"
			android:textColor="@color/sett_group"
			android:textSize="@dimen/grp_name_size" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_sample_format"
			android:textColor="@color/text" />
		<Spinner
			android:id="@+id/spSampleFormat"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_sample_rate"
			android:textColor="@color/text" />
		<EditText
			android:id="@+id/eSampleRate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="number"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/conv_encoding"
			android:textColor="@color/sett_group"
			android:textSize="@dimen/grp_name_size" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_aac_q"
			android:textColor="@color/text" />
		<SeekBar
			android:id="@+id/sbAACQ"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<EditText
			android:id="@+id/eAACQ"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="number"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_opus_q"
			android:textColor="@color/text" />
		<SeekBar
			android:id="@+id/sbOpusQ"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<EditText
			android:id="@+id/eOpusQ"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="number"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:text="@string/conv_mp3_q"
			android:textColor="@color/text" />
		<SeekBar
			android:id="@+id/sbMp3Q"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<EditText
			android:id="@+id/eMp3Q"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/sett_margin"
			android:inputType="number"
			android:textSize="@dimen/text_editbox" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/conv_behaviour"
			android:textColor="@color/sett_group"
			android:textSize="@dimen/grp_name_size" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/swCopy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/sett_margin"
			android:text="@string/conv_copy" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/swPreserveDate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/sett_margin"
			android:text="@string/conv_preserve_date" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/swOutOverwrite"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/sett_margin"
			android:text="@string/conv_overwrite" />
		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/swOutOverwriteConfirm"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/sett_margin"
			android:text="@string/conv_overwrite2" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/swTrashOrig"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/sett_margin"
			android:text="@string/conv_trash_orig" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/swPlAdd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/sett_margin"
			android:text="@string/conv_pl_add" />

		<Button
			android:id="@+id/bStart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/conv_go" />

		<TextView
			android:id="@+id/lResult"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text=""
			android:textColor="@color/text" />

	</LinearLayout>
</ScrollView>
