<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spBand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sett_margin"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sett_margin"
        android:layout_marginTop="@dimen/sett_margin"
        android:text="@string/sett_equalizer_frequency"
        android:textColor="@color/text" />

    <SeekBar
        android:id="@+id/sbFreq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sett_margin"
        android:layout_marginTop="@dimen/sett_margin"
        android:text="@string/sett_equalizer_width"
        android:textColor="@color/text" />

    <SeekBar
        android:id="@+id/sbWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sett_margin"
        android:layout_marginTop="@dimen/sett_margin"
        android:text="@string/sett_equalizer_gain"
        android:textColor="@color/text" />

    <SeekBar
        android:id="@+id/sbGain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/eEQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sett_margin"
        android:inputType="text"
        android:textSize="@dimen/text_editbox" />

</LinearLayout>